force-app/main/default/objects/Case/fields/TEST_fld_adjustmentId__c.field-meta.xml
<CustomField>
    <fullName>TEST_fld_adjustmentId__c</fullName>
    <label>Adjustment Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>