force-app/main/default/objects/Case/fields/TEST_fld_amount__c.field-meta.xml
<CustomField>
    <fullName>TEST_fld_amount__c</fullName>
    <label>Amount</label>
    <length>19</length>
    <type>Text</type>
</CustomField>