force-app/main/default/objects/Case/fields/TEST_fld_currency__c.field-meta.xml
<CustomField>
    <fullName>TEST_fld_currency__c</fullName>
    <defaultValue>&apos;EUR&apos;</defaultValue>
    <label>Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>