force-app/main/default/objects/Case/validationRules/TEST_vr_adjustmentId.validationRule-meta.xml
<ValidationRule>
    <fullName>TEST_vr_adjustmentId</fullName>
    <active>true</active>
    <description>Check if the pattern of Adjustment Id is correct: 
[0-9a-f]{8}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{12}</description>
    <errorConditionFormula>AND(NOT(ISBLANK(TEST_fld_adjustmentId__c)),
NOT(REGEX(TEST_fld_adjustmentId__c, 
&quot;^[0-9a-f]{8}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{12}$&quot;)))</errorConditionFormula>
    <errorDisplayField>TEST_fld_adjustmentId__c</errorDisplayField>
    <errorMessage>The pattern of Adjustment Id must be: 
[0-9a-f]{8}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{12}</errorMessage>
</ValidationRule>