force-app/main/default/objects/Case/validationRules/TEST_vr_amount.validationRule-meta.xml
<ValidationRule>
    <fullName>TEST_vr_amount</fullName>
    <active>true</active>
    <description>Check if the pattern of Amount is correct: -?[0-9]{1,14}(\\.[0-9]{1,3})?</description>
    <errorConditionFormula>AND(NOT(ISBLANK(TEST_fld_amount__c)),
NOT(REGEX(TEST_fld_amount__c,&quot;^-?[0-9]{1,14}(\\.[0-9]{1,3})?$&quot;)))</errorConditionFormula>
    <errorDisplayField>TEST_fld_amount__c</errorDisplayField>
    <errorMessage>The pattern of Amount must be: -?[0-9]{1,14}(\\.[0-9]{1,3})?</errorMessage>
</ValidationRule>