force-app/main/default/objects/Case/validationRules/TEST_vr_currency.validationRule-meta.xml
<ValidationRule>
    <fullName>TEST_vr_currency</fullName>
    <active>true</active>
    <description>Check if the pattern of Currency is correct: [A-Z]{3}</description>
    <errorConditionFormula>AND(NOT(ISBLANK(TEST_fld_currency__c)),
NOT(REGEX(TEST_fld_currency__c,&quot;^[A-Z]{3}$&quot;)))</errorConditionFormula>
    <errorDisplayField>TEST_fld_currency__c</errorDisplayField>
    <errorMessage>The pattern of Currency must be: [A-Z]{3}</errorMessage>
</ValidationRule>